--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,19 @@
-title: <p align="center"> Chris Tran </p>
+title: <p align="center"> Avery Robinson </p>
 
 logo: "/images/picture.png?raw=true"
 
 description:
   <p align="center">
   <a href="pdf/resume.pdf">Resume</a> |
-  <a href="https://www.linkedin.com/in/chriskhanhtran/">LinkedIn</a> |
-  <a href="https://github.com/chriskhanhtran">GitHub</a>
+  <a href="https://www.linkedin.com/in/averyrobinson98/">LinkedIn</a> |
+  <a href="https://github.com/averyrobinson98">GitHub</a>
   </p>
   
   <p align="justify">
-  I am pursing MS degree in Business Analytics at Simon Business School, University of Rochester.
+  UCLA Statistics Graduate
   <br><br>
-  I am currently a Machine Learning Research Intern at Skim AI Technologies with a focus on NLP and Deep Learning research.
+  Applications in Data Science
   <br><br>
   </p>
   
 theme: jekyll-theme-minimal
-google_analytics: UA-145578661-1 # Google Analytics tracking ID
