--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,8 @@ description:
   </p>
   
   <p align="justify">
-  UCLA Statistics Graduate
+  UCLA Statistics senior graduating in December 2021
   <br><br>
-  Applications in Data Science
   <br><br>
   </p>
   
