--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: <p align="center"> Avery Robinson </p>
+title: <p align="left"> Avery Robinson </p>
 
 
 description:
-  <p align="center">
+  <p align="left">
   <a href="pdf/resume.pdf">Resume</a> |
   <a href="https://www.linkedin.com/in/averyrobinson98/">LinkedIn</a> |
   <a href="https://github.com/averyrobinson98">GitHub</a>
