--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-title: <p align="left"> Avery Robinson </p>
+title: <p align="center"> Avery Robinson </p>
 
 
 description:
-  <p align="left">
+  <p align="center">
   <a href="pdf/resume.pdf">Resume</a> |
   <a href="https://www.linkedin.com/in/averyrobinson98/">LinkedIn</a> |
   <a href="https://github.com/averyrobinson98">GitHub</a>
   </p>
   
-  <p align="justify">
+  <p align="left">
   UCLA Statistics senior graduating in December 2021
   <br><br>
   <br><br>
