--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,13 @@ title: <p align="center"> Avery Robinson </p>
 
 
 description:
-  <p align="center">
+  <p align="left">
   <a href="pdf/resume.pdf">Resume</a> |
   <a href="https://www.linkedin.com/in/averyrobinson98/">LinkedIn</a> |
   <a href="https://github.com/averyrobinson98">GitHub</a>
   </p>
   
-  <p align="left">
+  <p align="justify">
   UCLA Statistics senior graduating in December 2021
   <br><br>
   <br><br>
