--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: <p align="center"> Avery Robinson </p>
+title: <p align="left"> Avery Robinson </p>
 logo: "/images/IMG_7754.jpeg?raw=true"
 
 description:
