--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/IMG_7754.jpeg?raw=true"
 
 description:
   <p align="left">
-  <a href="pdf/resume.pdf">Resume</a> |
+  <a href="pdf/Robinson_Avery_Resume.pdf">Resume</a> |
   <a href="https://www.linkedin.com/in/averyrobinson98/">LinkedIn</a> |
   <a href="https://github.com/averyrobinson98">GitHub</a>
   </p>
