--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description:
   <a href="https://github.com/averyrobinson98">GitHub</a>
   </p>
   
-  <p align="left">
+  <p align="center">
   UCLA Statistics senior graduating in December 2021
   <br><br>
   <br><br>
