--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description:
   </p>
   
   <p align="center">
-  UCLA Statistics senior graduating in December 2021
+  UCLA Statistics Senior
   <br><br>
   <br><br>
   </p>
