--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: <p align="center"> Avery Robinson </p>
 logo: "/images/IMG_7754.jpeg?raw=true"
 
 description:
-  <p align="left">
+  <p align="center">
   <a href="https://www.linkedin.com/in/averyrobinson98/">LinkedIn</a> |
   <a href="https://github.com/averyrobinson98">GitHub</a>
   </p>
